# dataanalysis-api-python

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  database.py  init_server.py  main.py
app/config/: cloudinary.py  db.py  flags.py  google.py  jwt.py  mail.py  paths.py  urls.py
app/controllers/ai/: __init__.py  ai_agent_noname_controller.py  ai_agent_user_controller.py
app/controllers/auth/: __init__.py  google_auth_controller.py  google_redirect_controller.py  login_controller.py  logout_controller.py  register_controller.py  (+4 more)
app/dependencies/: __init__.py  authenticate.py  datasource_form.py  get_valid_parameter.py  profile_form.py  time_params.py  upload_file.py  valid_parameter.py
app/exceptions/: __init__.py  custom_exception.py  generic_exception.py  standard_exception.py
app/middleware/: __init__.py  authenticate.py  cache_control.py  logging_middleware.py
app/models/: __init__.py  data.py  data_analysis.py  data_source.py  enums.py  source_data.py  theme.py  user.py
app/routers/: __init__.py  ai_router.py  auth_router.py  data_router.py  sources_router.py  users_router.py
app/schemas/: __init__.py  ai_schema.py  data_schema.py  data_source_schema.py
app/templates/: reset_password_email.html  verification_email.html
app/utils/: __init__.py  ai_utils.py  constants.py  ctrl_wrapper.py  fake_data.py  get_template_path.py  jwt_utils.py  save_file_to_cloudinary.py  save_file_to_uploaddir.py  send_mail_brevo.py
app/validation/: __init__.py  auth_validation.py  data_sources_validation.py  users_validation.py
tests/: conftest.py
(+72 files in other folders)
